--- a/front-end/src/layout/navbar.css
+++ b/front-end/src/layout/navbar.css
@@ -2,6 +2,7 @@
 .container{
     display:flex;
     width: 100%;
+    position: relative;
 }
 
 
@@ -9,6 +10,7 @@
     display: flex;
     width: 100%;
     background-color: #152c5b;
+    box-shadow: 6px 6px 6px #A8A8B3;
 }
 
 .list{
@@ -17,16 +19,25 @@
     list-style: none;
     margin: 0.2em;
     text-align: center;
-    justify-self: flex-end;
+    padding: 1em;
+    text-decoration: none;
+}
+.dropdown-menu a{
+    text-decoration: none;
+    color: #000;
 }
 
 
 .icon {
     display: flex;
     justify-content: flex-start;
-    font-size: 39px;
-    color: #000;
-    padding: 0.2em;
+    box-sizing: border-box;
+    font-size: 45px;
+    font-weight: lighter;
+    width: 50px;
+    height: 50px;
+    color: #ffffff;
+    margin: 3px 23px;
 }
 
 .search{
@@ -34,28 +45,20 @@
     text-align: start;
     border: none;
     border-radius: 10px;
-    margin: 0;
-    height: 30px;
-    padding: 10px 10px 10px 5px;
+    margin: 1em;
+    height: 33px;
+    padding: 10px 120px 10px 6px;
 }
-
-.search:active{
-    border-color: #ffffff;
-    border: 0;
-}
-
 
 .icon-button{
     background-color: #152c5b;
     border-color: #152c5b;
-    padding: .02em;
+    padding: .43em
 }
 
 .icon-button:hover{
     border-color: #ffffff;
 }
-
-
 
 
 .item {
@@ -71,19 +74,23 @@
 }
 
 .cart{
-    font-size: 24px;
-    padding: 0.2em;
-    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    font-size: 40px;
+    color:#ffffff;
+    font-weight: lighter;
+    margin: 1px 25px;
+    transition: 0.3s;
 }
 
 .button-cart{
     border-color:  #152c5b;
-    padding: .02rem;
 }
 
 
 .button-cart:hover{
-    border-color: #f8fbfe;
+    border: 0.5px solid #f8fbfe;
 }
 
 
