--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -1,26 +1,33 @@
-.home{
+.container{
+    display: flex;
+    padding-top: 2em;
+}
+.title {
+    display: block;
+    padding-left: 400px;
+    position: relative;
+}
+.section{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
     justify-content: space-between;
     flex-wrap: nowrap;
-    width: 100%;
-    padding-top: 2em;
+    margin: 10px;
+    position: fixed;
 }
 
 .card{
     border: 2px solid #7a7a7a;
     border-radius: 5px;
     width: 20%;
-    display: inline-table;
+    display: none;
     margin: 0.5em;  
     padding: 0.2em;
     justify-content: space-evenly;
     box-shadow: 7px 7px 7px #A8A8B3;
 }
 
-
-.card h1{
+.card-img-top{
         background-color: #e3e6e6;
         text-align: center;
         border-radius: 3px;
@@ -30,3 +37,5 @@
         font-size: 1.5em;
         font-weight: bold;
 }
+
+
