--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -1,30 +1,44 @@
 .container{
     display: flex;
-    padding-top: 2em;
+    padding-top: 30px;
 }
+
 .title {
-    display: block;
-    padding-left: 400px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
     position: relative;
+    margin: 1px;
+    padding: 2px;
+    width: 100%;
+    background-color: #e3e6e6;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px #7a7a7a;
 }
 .section{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
-    margin: 10px;
+    margin: 50px 0;
     position: fixed;
 }
 
 .card{
     border: 2px solid #7a7a7a;
     border-radius: 5px;
-    width: 20%;
+    width: 100%;
     display: none;
-    margin: 0.5em;  
-    padding: 0.2em;
-    justify-content: space-evenly;
-    box-shadow: 7px 7px 7px #A8A8B3;
+    margin: 20px;  
+    padding: 2px;
+    justify-content: space-around;
+    box-shadow: 1px 1px 1px 1px #7a7a7a;
+    
+}
+
+.card:hover{
+    transition: 0.3s;
+    box-shadow: 2px 2px 2px 2px #A8A8B3;
 }
 
 .card-img-top{
@@ -32,7 +46,7 @@
         text-align: center;
         border-radius: 3px;
         border: none;
-        padding: .3em;
+        padding: 5px;
         margin-bottom: 0.4em;
         font-size: 1.5em;
         font-weight: bold;
