--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    position:  relative;
 }
 
 .title {
@@ -13,16 +14,15 @@
     margin: 1px;
     padding: 2px;
     width: 50%;
-    background-color: #ffffff;
+    background-color: #e3e6e6;
     border-radius: 5px;
     box-shadow: 2px 2px 2px 2px #7a7a7a;
 }
-
 .section{
     display: flex;
-    position: relative;
+    position: fixed;
     justify-content: space-between;
-    flex-wrap: nowrap;
+    flex-wrap:  nowrap;
     margin: 45px 90px 0px 0px;
 }
 
@@ -34,7 +34,6 @@
     position: relative;
     display: flex;
     box-shadow: 2px 2px 2px 2px #7a7a7a;   
-    flex-direction: column;
 }
 
 .card:hover{
@@ -43,11 +42,11 @@
 }
 
 .card-img-top{
-        background-color: #f8fbfe;
+        background-color: #ffffff;
         text-align: center;
         border-radius: 1px;
         border: none;
-        width: 150px;
+        width: 130px;
         height: 150px;
         margin-bottom: 0.4em;
 }
@@ -70,7 +69,7 @@
     float: inline-start;
     object-fit: contain;
     margin: 0;
-    width: 150px;
+    width: 130px;
     height: 150px;
 }
 
