--- a/front-end/src/layout/navbar.css
+++ b/front-end/src/layout/navbar.css
@@ -9,7 +9,7 @@
 .nav{
     display: flex;
     width: 100%;
-    background-color: #232f3e;
+    background-color: #232F3E;
     box-shadow: 6px 6px 6px #A8A8B3;
 }
 
