--- a/front-end/src/pages/login.css
+++ b/front-end/src/pages/login.css
@@ -13,7 +13,7 @@
     justify-content: space-around;
     flex-direction: column;
     width: 365px;
-    margin: 1em;
+    margin: 50px 2px;
     padding: 19px;
     border: 1px solid #e7e7e7;
 }
@@ -50,20 +50,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 72%;
+    width: 70%;
     padding: 0.5em;
     margin: 7px 27px 7px;
     border: none;
     border-radius: 20px;
-    background-color: #ffd814;
+    background-color: #FEBD69;
     color: #ffffff;
     box-shadow: 5px 5px 5px #c5c9c9;
     transition: 0.3s;
 }
 
 .button:hover{
-    background-color: #ffd814;
-    opacity: 0.86;
+    background-color: #FEBD69;
+    opacity: 0.90;
     color: #ffffff;
 }
 
@@ -74,13 +74,12 @@
     flex-direction: row;
     position: relative;
     width: 100%;
-    padding: 0.5em;
+    margin: 35px 0px;
 }
 
 
 .new-account button{
     background-color: #f8fbfe;
-    margin-top: 100px;
     padding: 12px;
     width: 25%;
     border: 1.9px solid #e8f0fe;
