Creting new aba

--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -16,11 +16,10 @@
     flex-direction: row;
     flex-wrap: nowrap;
     position: relative;
-    box-shadow: 1px 1px 1px 1px#7a7a7a;
-    border-radius: 20px;
     margin: 29px 0px;
     padding: 12px;
     justify-content: center;
+    
 }
 
 .card-section .card{
@@ -46,7 +45,7 @@
     text-align: center;
     border-radius: 1px;
     border: none;
-    width: 130px;
+    width: 120px;
     height: 120px;
     object-fit: contain;
     margin-bottom: 15px;
@@ -57,23 +56,25 @@
     text-align: justify;
     padding: 1px;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 .card-body span{
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 700;
 }
 
 .buy{
     display: flex;
     background-color: #ffd814;
-    margin: 9px;
-    padding: 1px 15px ;   
+    margin: 10px;
+    padding: 2px 15px;   
     border: 0;
     border-radius: 5px;
     justify-content: space-around;
     box-shadow: 2px 2px 2px #333333;
 }
+
 .buy:hover{
     box-shadow: 1px 1px 1px #555555;
 }
@@ -92,4 +93,11 @@
 
 .add_cart:hover{
     box-shadow: 1px 1px 1px #555555;
+}
+
+h2{
+    padding: 1px;
+    margin: 20px 0px 0px;
+    font-size: 35px;
+    font-weight: 800;
 }
