--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -25,7 +25,7 @@
 .card-section .card{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     position: relative;
     border-radius: 6px;
     width: 185px;
@@ -56,7 +56,7 @@
     text-align: justify;
     padding: 1px;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
 }
 
 .card-body span{
