--- a/front-end/src/layout/navbar.css
+++ b/front-end/src/layout/navbar.css
@@ -17,14 +17,24 @@
     display: flex;
     float: right;
     list-style: none;
-    margin: 0.2em;
-    text-align: center;
-    padding: 1em;
+    margin: 0.2px;
+    align-items: center;
+    padding: 20px;
     text-decoration: none;
 }
+
 .dropdown-menu a{
     text-decoration: none;
     color: #000;
+    
+}
+
+.dropdown-item{
+    display: flex;
+    padding: 10px;
+    font-size: 16px;
+    justify-content: flex-start;
+    border-radius: 20px;
 }
 
 
