Done with the featch and done with the home

--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -1,98 +1,14 @@
 .container{
-    display: flex;
-    flex-direction: column;
+    display: inline-table;
+    flex-direction: row;
     position: relative;
 }
 
 .section{
     display: flex;
     position: relative;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-section{
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    position: relative;
-    margin: 29px 0px;
-    padding: 12px;
-    justify-content: center;
-    
-}
-
-.card-section .card{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    position: relative;
-    border-radius: 6px;
-    width: 185px;
-    justify-content: space-around;
-    box-shadow: 2px 2px 2px 2px #7a7a7a;
-    margin: 1px 6px;
-}
-
-.card:hover{
-    transition: 0.3s;
-    box-shadow: 1px 1px 1px 1px #A8A8B3;
-}
-
-
-.card-img-top{
-    background-color: #ffffff;
-    text-align: center;
-    border-radius: 1px;
-    border: none;
-    width: 120px;
-    height: 120px;
-    object-fit: contain;
-    margin-bottom: 15px;
-}
-
-
-.card-body{
-    text-align: justify;
-    padding: 1px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.card-body span{
-    font-size: 15px;
-    font-weight: 700;
-}
-
-.buy{
-    display: flex;
-    background-color: #ffd814;
-    margin: 10px;
-    padding: 2px 15px;   
-    border: 0;
-    border-radius: 5px;
-    justify-content: space-around;
-    box-shadow: 2px 2px 2px #333333;
-}
-
-.buy:hover{
-    box-shadow: 1px 1px 1px #555555;
-}
-
-
-.add_cart{
-    display: flex;
-    background-color: #ffd814;
-    margin: 10px;
-    padding: 2px 15px;
-    justify-content: space-around;
-    border: 0;
-    border-radius: 5px;
-    box-shadow: 2px 2px 2px #333333;
-}
-
-.add_cart:hover{
-    box-shadow: 1px 1px 1px #555555;
+    justify-self: center;
+    margin: 10px 0px;
 }
 
 h2{
