Done with create account and login

--- a/front-end/src/pages/login.css
+++ b/front-end/src/pages/login.css
@@ -97,27 +97,18 @@
     background-color: #FEBD69;
     box-shadow: 1px 1px 1px 1px #c5c9c9;
 }
+
+
 .error{
-    display: flex;
-    background-color:#FF9494;
-    border: 0;
-    border-radius: 10px;
-    width: 180px;
-    text-align: center;
+    display: flexbox;
+    width: 230px;
+    height: 39px;
     padding: auto;
     margin: auto;
+    background-color: #ff0033;
+    border: 0;
+    border-radius: 12px;
+    font-size: 17px;
+    color:#0f1111;
 }
 
-
-.error p{
-    color: #000000;
-    font-size: 12px;
-    font-weight: 700;
-}
-
-
-.ok{
-    background-color: #e7e7e7;
-    color: #ffffff;
-    
-}
