--- a/front-end/src/pages/newAccount.css
+++ b/front-end/src/pages/newAccount.css
@@ -59,3 +59,19 @@
     height: 30px; 
     box-shadow: 1px 1px 1px 1px #c5c9c9;
 }
+
+
+.error span{
+    width: 220px;
+    height: 37px;
+    padding: auto;
+    background-color: #ff0033;
+    border: 0;
+    border-radius: 12px;
+    align-items: center;
+    margin: 10px;
+    opacity: 0.9;
+    text-align: center; 
+    font-size: 17px;
+    color:#0f1111;
+}
