done with account, stating page edit

--- a/front-end/src/Login/account.css
+++ b/front-end/src/Login/account.css
@@ -32,8 +32,22 @@
     color:#333333;
 }
 
+.button-logout{
+    display: inline;
+    position: relative;
+    align-self: center;
+    justify-self: center;
+    text-align: center;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px 1px #f3f3f3;
+    width: 115px;
+    margin: 10px;
+}
 
-.list-group-item button {
+
+.button-edit{
     align-self: flex-end;
     background-color: #ffffff;
     border: none;
@@ -41,10 +55,12 @@
     box-shadow: 1px 1px 1px 1px #f3f3f3;
     width: 120px;
     margin: 5px;
+    color: #0f1111;
 }
 
-.list-group-item button:hover{
+.button-edit:hover{
     background-color: #f3f3f3;
     box-shadow: 0.5px 0.5px 0.5px 0.5px #f3f3f3;
 }
+
 
