--- a/front-end/src/layout/ProductCard.css
+++ b/front-end/src/layout/ProductCard.css
@@ -2,16 +2,16 @@
     display: inline-table;
     flex-direction: row;
     flex-wrap: wrap;
-    position: 1px;
-    margin: 0.2px;
-    justify-content: space-around;
+    position: relative;
+    margin: 2px;
 }
+
 .card-section .card{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     position: relative;
-    border-radius: 6px;
+    border-radius: 7px;
     width: 250px;
     box-shadow: 2px 2px 2px 2px #7a7a7a;
     justify-content: space-between;
@@ -26,14 +26,10 @@
 
 .card-img-top{
     display: flex;
-    background-color: #ffffff;
+    justify-self: center;
     text-align: center;
     object-fit: contain;
-    border-radius: 1px;
-    border: none;
-    width: auto;
-    height: auto;
-    max-width: 150px;
+    max-width: 240px;
     max-height: 150px;
 }
 
@@ -42,10 +38,9 @@
     display: flex;
     text-align: start;
     flex-direction: column;
-    align-items: safe;
-    padding: 5px 0px 1px 0px;
+    align-items: baseline;
     margin: 1px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .card-body span, p{
