--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -1,19 +1,13 @@
 .container{
     display: inline-table;
     flex-direction: row;
-    position: relative;
+    position: fixed;
 }
 
 .section{
     display: flex;
     position: relative;
-    justify-self: center;
-    margin: 10px 0px;
+    justify-content: space-evenly;
+    margin-top: 10px;
 }
 
-h2{
-    padding: 1px;
-    margin: 20px 0px 0px;
-    font-size: 35px;
-    font-weight: 800;
-}
