--- a/front-end/src/form/emailForm.css
+++ b/front-end/src/form/emailForm.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-around;
     align-self: center;
-    width: 520px;
+    width: 110px;
     box-shadow: 1px 1px 1px 1px #e7e7e7;
 }
 
@@ -32,10 +32,11 @@
 .card-input{
     font-size: 16px;
     font-weight: 200;
+    padding: 5px;
 }
 
 .card-input input{
-    width: 180px;
+    width: 190px;
     border-radius: 9px;
     border: 0;
     box-shadow: 0.5px 0.5px 0.5px 0.5px #c5c9c9;
@@ -48,11 +49,20 @@
     border-radius: 12px;
     width: 150px;
     box-shadow: 1px 1px 1px 1px #e7e7e7;
-    background-color: #FEBD69;
+    background-color: #FEBD69;  
     transition: 0.1s;
 }
 
 
 .card button:hover{
     box-shadow: 0.5px 0.5px 0.5px 0.5px #e7e7e7;
+}
+
+.icon-prev{
+    display: flex;
+    align-self:  flex-start;
+    padding: 10px;
+    margin: 10px;
+    width: auto;
+    height: auto;
 }
