--- a/front-end/src/layout/ProductCard.css
+++ b/front-end/src/layout/ProductCard.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
-    margin: 2px;
+    padding: 2px;
 }
 
 .card-section .card{
@@ -12,10 +12,12 @@
     flex-wrap: nowrap;
     position: relative;
     border-radius: 7px;
-    width: 250px;
+    width: 235px;
+    height: 325px;
     box-shadow: 2px 2px 2px 2px #7a7a7a;
-    justify-content: space-between;
-    margin: 15px 14px 0px 10px;
+    justify-content: space-around;
+    margin: 12px 12px auto 11px;
+    padding: 1px;
 }
 
 .card:hover{
@@ -29,7 +31,7 @@
     justify-self: center;
     text-align: center;
     object-fit: contain;
-    max-width: 240px;
+    max-width: 220px;
     max-height: 150px;
 }
 
@@ -39,7 +41,8 @@
     text-align: start;
     flex-direction: column;
     align-items: baseline;
-    margin: 1px;
+    margin: auto;
+    padding: 1px;
     justify-content: space-around;
 }
 
