Done with css, try to do a slider

--- a/front-end/src/layout/ProductCard.css
+++ b/front-end/src/layout/ProductCard.css
@@ -44,6 +44,8 @@
     margin: auto;
     padding: 1px;
     justify-content: space-around;
+    text-decoration: none;
+    position: relative;
 }
 
 .card-body span, p{
