--- a/Website/src/pages/product.css
+++ b/Website/src/pages/product.css
@@ -4,8 +4,6 @@
     margin: auto;
     padding: auto;
     width: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 
@@ -15,21 +13,8 @@
     width: auto;
     height: auto;
     padding: auto;
-    margin: auto;
     text-align: justify;
     position: relative;
-    justify-content: center;
-    align-items: center;
-}
-
-.carousel{
-    display: flex;
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    padding: auto;
-    margin: auto;    
 }
 
 
@@ -85,11 +70,10 @@
 
 .card-img{
     display: flex;
+    align-content: center;
     padding: auto;
     margin: auto;
     position: relative;
-    justify-self: center;
-    align-: center;
 }
 
 
@@ -113,4 +97,13 @@
 }
 
 
-
+.carousel{
+    display: flex;
+    object-fit: contain;
+    align-items: center;
+    justify-self: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
